aap-product-docs-plaintext/red_hat_content/documentation/red_hat_ansible_automation_platform/2.5/configuring_automation_execution/configure-pac-settings_controller-pac.md
# 7. Implementing policy enforcement
## 7.2. Configuring policy enforcement settings




You can specify how your Ansible Automation Platform instance interacts with OPA by modifying your global settings.

**Prerequisites**

- To configure policy enforcement, you must have administrative privileges.


Note
If you do not configure the OPA server in your policy settings, policy evaluation will not occur when you run the job.



**Procedure**

1. From the navigation panel, selectSettings→Automation Execution→Policy.
1. Click **Edit policy settings** .
1. On the Policy Settings page, fill out the following fields:


1. Depending on your authentication type, you may need to fill out the following fields.


1. If you selected Token as your authentication type:


1. If you selected Certificate as your authentication type:



1. Beneath the heading labeled **Options** :


1. ClickSave policy settings.


